src/tests/testfiles/unary-operators/16.txt
testfiles/unary-operators/16.c:16:7: error: incompatible types when initializing type 'char *' using type 'char * *'
 	char * sss  = &s;
 	     ^
